--- a/session-finder.ipynb
+++ b/session-finder.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Let's Group Sessions From the Camera Roll based on Timestamp\n",
     "\n",
+    "## Instructions\n",
+    "\n",
     "First, you will need to move `my-photos-creationdate.txt` to a directory where `jupyter` can access it."
    ]
   },
