--- a/session-finder.ipynb
+++ b/session-finder.ipynb
@@ -27,7 +27,9 @@
    },
    "outputs": [],
    "source": [
-    "with open('../my-photos-creationdate.txt', 'r') as file:\n",
+    "filename = '../my-photos-creationdate.txt'\n",
+    "\n",
+    "with open(filename, 'r') as file:\n",
     "    create_timestamps_file = file.read()"
    ]
   },
